# multi-instrument-onsets-and-frames

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  e1.py  e2.py  e3.py  evaluate.py  pyproject.toml  requirements.txt  tensorboard.sh  train.py  transcribe.py
experiments/: e0.py  e0.slurm  e0a.py  e0a.slurm  e0b.py  e0b.slurm  e0c.py  e0c.slurm  e1.py  e1.slurm  e1a.py  e1a.slurm  e1b.py  e1b.slurm  e1c.py  e1c.slurm  e2.py  e2.slurm  e3.py  e3.slurm  e3a.py  e3a.slurm  e3b.py  e3b.slurm  e3c.py  e3c.slurm  e4.py  e4.slurm  e5.py  e6.py  e6.slurm  e_all.py  e_all.slurm  e_all_ind.py  e_all_ind.slurm
onsets_and_frames/: constants.py  dataset.py  decoding.py  mel.py  midi.py  transcriber.py  unet.py  utils.py
pre_training/: blur.py  encoder.py  mnist.py  mnist_encoder.py  mnist_pretrained.py  pre_trainer.py  siamese_network.py  simsiam.py
scripts/: e3.slurm  spleeter_on_slakh.py  umx_on_slakh.py
tests/test_functional/: dataset_benchmark.py
