[tool.poetry]
name = "multi-instrument-onsets-and-frames"
version = "0.1.0"
description = ""
authors = ["Henrik Grønbech <henrikgronbech@gmail.com>"]
license = "MIT"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
profile = "black"
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files

[tool.poetry.dependencies]
python = "3.8"
scipy = ">=1.1.0"
numpy = ">=1.15.0"
tqdm = ">=4.28.1"
mir-eval = {git = "https://github.com/craffel/mir_eval.git"}
mido = ">=1.2.9"
Pillow = ">=6.2.0"
tensorboard = "^2.4.1"
sacred = "^0.8.2"
soundfile = "^0.10.3"
pretty_midi = "^0.2.9"
torch = "^1.8.1"
torchaudio = "^0.8.1"
slakh-dataset = "^0.1.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
spleeter = "^2.2.2"
openunmix = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
